src/url_parser.c
/* Generated by re2c 0.16 on Sun Jul 31 19:49:27 2016 */
#line 1 "url_parser.re"
#include <stdlib.h>
#include <string.h>
#include "url_parser.h"

int url_parse (const char *url_str, URL *url)
{
  const char *marker;
  const char *ctxmarker;
  const char *src = url_str;
  int pos = 0;

#line 15 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy4;
	default:	goto yy2;
	}
yy2:
	++url_str;
yy3:
#line 48 "url_parser.re"
	{ return 0; }
#line 79 "url_parser.c"
yy4:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy6;
	default:	goto yy3;
	}
yy5:
	++url_str;
	yych = *url_str;
yy6:
	switch (yych) {
	case '+':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy5;
	case ':':	goto yy8;
	default:	goto yy7;
	}
yy7:
	url_str = marker;
	goto yy3;
yy8:
	++url_str;
#line 50 "url_parser.re"
	{
    int len = url_str - src - 1;
    url->scheme = get_lex(src, &pos, len);
    pos++; // add ":"
    goto hier_part;
  }
#line 236 "url_parser.c"
}
#line 56 "url_parser.re"


hier_part:

#line 243 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case 0x00:	goto yy12;
	case '/':	goto yy16;
	default:	goto yy14;
	}
yy12:
	++url_str;
#line 61 "url_parser.re"
	{ return 0;}
#line 256 "url_parser.c"
yy14:
	++url_str;
yy15:
#line 60 "url_parser.re"
	{ goto hier_part_path; }
#line 262 "url_parser.c"
yy16:
	yych = *++url_str;
	switch (yych) {
	case '/':	goto yy17;
	default:	goto yy15;
	}
yy17:
	++url_str;
#line 62 "url_parser.re"
	{ pos +=2; goto hier_part_authority; }
#line 273 "url_parser.c"
}
#line 63 "url_parser.re"


hier_part_authority:

#line 280 "url_parser.c"
{
	unsigned char yych;
	yych = *url_str;
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy23;
	case '%':	goto yy24;
	default:	goto yy21;
	}
yy21:
	++url_str;
yy22:
#line 67 "url_parser.re"
	{ url_str--; goto hier_part_host; }
#line 371 "url_parser.c"
yy23:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case '@':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy26;
	default:	goto yy22;
	}
yy24:
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy31;
	default:	goto yy22;
	}
yy25:
	++url_str;
	yych = *url_str;
yy26:
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy25;
	case '%':	goto yy28;
	case '@':	goto yy29;
	default:	goto yy27;
	}
yy27:
	url_str = marker;
	goto yy22;
yy28:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy31;
	default:	goto yy27;
	}
yy29:
	++url_str;
#line 69 "url_parser.re"
	{
    int len = url_str - src - pos - 1; // unshift 1 char for "@"
    url->userinfo = get_lex(src, &pos, len);
    pos++; // shift for "@" char
    goto hier_part_host;
  }
#line 611 "url_parser.c"
yy31:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy25;
	default:	goto yy27;
	}
}
#line 75 "url_parser.re"


hier_part_host:

#line 646 "url_parser.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *url_str;
	ctxmarker = url_str;
	switch (yych) {
	case 0x00:	goto yy34;
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy38;
	case '%':	goto yy41;
	case '/':	goto yy42;
	case '0':	goto yy44;
	case '1':	goto yy45;
	case '2':	goto yy46;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	case '[':	goto yy48;
	default:	goto yy36;
	}
yy34:
	++url_str;
#line 79 "url_parser.re"
	{ return 0;}
#line 740 "url_parser.c"
yy36:
	++url_str;
yy37:
#line 80 "url_parser.re"
	{ return 0; }
#line 746 "url_parser.c"
yy38:
	yyaccept = 0;
	marker = ++url_str;
	yych = *url_str;
yy39:
	switch (yych) {
	case '!':
	case '$':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy38;
	case '%':	goto yy49;
	default:	goto yy40;
	}
yy40:
#line 113 "url_parser.re"
	{
    int len = url_str - src - pos;
    url->host->type = REGNAME;
    char *name = get_lex(src, &pos, len);
    strncpy (url->host->name, name, HOST_MAX_LEN < len + 1 ? HOST_MAX_LEN : len + 1);
    free (name);
    goto hier_part_port;
  }
#line 843 "url_parser.c"
yy41:
	yyaccept = 1;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy51;
	default:	goto yy37;
	}
yy42:
	++url_str;
	url_str = ctxmarker;
#line 81 "url_parser.re"
	{
    url->host->type = UNKNOWN;
    goto hier_part_path;
  }
#line 880 "url_parser.c"
yy44:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy52;
	default:	goto yy39;
	}
yy45:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy52;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy47;
	default:	goto yy39;
	}
yy46:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy52;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy47;
	case '5':	goto yy53;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy44;
	default:	goto yy39;
	}
yy47:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy52;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy44;
	default:	goto yy39;
	}
yy48:
	yyaccept = 1;
	yych = *(marker = ++url_str);
	switch (yych) {
	case ']':	goto yy37;
	case 'v':	goto yy56;
	default:	goto yy54;
	}
yy49:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy51;
	default:	goto yy50;
	}
yy50:
	url_str = marker;
	switch (yyaccept) {
	case 0: 	goto yy40;
	case 1: 	goto yy37;
	default:	goto yy76;
	}
yy51:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy38;
	default:	goto yy50;
	}
yy52:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':	goto yy57;
	case '1':	goto yy58;
	case '2':	goto yy59;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy60;
	default:	goto yy39;
	}
yy53:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy52;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy44;
	default:	goto yy39;
	}
yy54:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case ']':	goto yy61;
	default:	goto yy54;
	}
yy56:
	yych = *++url_str;
	switch (yych) {
	case ']':	goto yy61;
	default:	goto yy63;
	}
yy57:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy65;
	default:	goto yy39;
	}
yy58:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy65;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy60;
	default:	goto yy39;
	}
yy59:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy65;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy60;
	case '5':	goto yy66;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy57;
	default:	goto yy39;
	}
yy60:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy65;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy57;
	default:	goto yy39;
	}
yy61:
	++url_str;
#line 103 "url_parser.re"
	{
    pos++; // shift "["
    int len = url_str - src - pos - 1; // skip "]"
    url->host->type = IPV6ADDR;
    char *name = get_lex(src, &pos, len);
    pos++;
    strncpy (url->host->name, name, HOST_MAX_LEN < len + 1 ? HOST_MAX_LEN : len + 1);
    free (name);
    goto hier_part_port;
  }
#line 1123 "url_parser.c"
yy63:
	++url_str;
	yych = *url_str;
	switch (yych) {
	case ']':	goto yy67;
	default:	goto yy63;
	}
yy65:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':	goto yy69;
	case '1':	goto yy70;
	case '2':	goto yy71;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy72;
	default:	goto yy39;
	}
yy66:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy65;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy57;
	default:	goto yy39;
	}
yy67:
	++url_str;
#line 93 "url_parser.re"
	{
    pos++; // shift "["
    int len = url_str - src - pos - 1;
    url->host->type = IPVFUTUR;
    char *name = get_lex(src, &pos, len);
    pos++;
    strncpy (url->host->name, name, HOST_MAX_LEN < len + 1 ? HOST_MAX_LEN : len + 1);
    free (name);
    goto hier_part_port;
  }
#line 1173 "url_parser.c"
yy69:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy73;
	default:	goto yy39;
	}
yy70:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy73;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy72;
	default:	goto yy39;
	}
yy71:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy73;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy72;
	case '5':	goto yy74;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy69;
	default:	goto yy39;
	}
yy72:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy73;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy69;
	default:	goto yy39;
	}
yy73:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '0':	goto yy75;
	case '1':	goto yy77;
	case '2':	goto yy78;
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy79;
	default:	goto yy39;
	}
yy74:
	yyaccept = 0;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '.':	goto yy73;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':	goto yy69;
	default:	goto yy39;
	}
yy75:
	yyaccept = 2;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy39;
	default:	goto yy76;
	}
yy76:
#line 85 "url_parser.re"
	{
    int len = url_str - src - pos;
    url->host->type = IPV4ADDR;
    char *name = get_lex(src, &pos, len);
    strncpy (url->host->name, name, HOST_MAX_LEN < len + 1 ? HOST_MAX_LEN : len + 1);
    free (name);
    goto hier_part_port;
  }
#line 1355 "url_parser.c"
yy77:
	yyaccept = 2;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy39;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy79;
	default:	goto yy76;
	}
yy78:
	yyaccept = 2;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
	case '~':	goto yy39;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':	goto yy79;
	case '5':	goto yy80;
	case '6':
	case '7':
	case '8':
	case '9':	goto yy75;
	default:	goto yy76;
	}
yy79:
	yyaccept = 2;
	yych = *(marker = ++url_str);
	switch (yych) {
	case '!':
	case '$':
	case '%':
	case '&':
	case '\'':
	case '(':
	case ')':
	case '*':
	case '+':
	case ',':
	case '-':
	case '.':
	case ';':
	case '=':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
